--- a/application/quiz/index.html
+++ b/application/quiz/index.html
@@ -53,14 +53,13 @@
     <div>
 
         <div>
-          <button type="button" id="quiz-button" class="btn btn-outline-primary">Responder</button>
+          <button type="button" id="quiz-button" class="btn btn-outline-primary">Quero responder</button>
         </div><br />
 
         <!--table: start-->
         <div class="col-md-6">
-          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm position-relative">
-
-            <table class="table">
+          <div class="bd-example-snippet bd-code-snippet"><div class="bd-example m-0 border-0">
+            <table id="rank-table" class="table table-striped">
               <thead>
               <tr>
                 <th scope="col">#</th>
@@ -81,8 +80,7 @@
               </tr>
               </tbody>
             </table>
-
-          </div>
+          </div></div>
         </div>
       <!--table: end -->
 
