feat: update interface

--- a/application/home/index.html
+++ b/application/home/index.html
@@ -17,7 +17,7 @@
     <link href="features.css" rel="stylesheet">
   </head>
 
-  <body>
+  <body style="background-image: url('../assets/background.jpg');">
   <main>
 
   <div class="container px-4 py-5">
