--- a/application/sign-in/index.html
+++ b/application/sign-in/index.html
@@ -17,7 +17,7 @@
   
   </head>
 
-  <body class="d-flex align-items-center py-4 bg-body-tertiary">
+  <body class="d-flex align-items-center py-4 bg-body-tertiary" style="background-image: url('../assets/background.jpg');">
     
     <main class="form-signin w-100 m-auto">
 
@@ -37,13 +37,14 @@
           <input type="text" class="form-control" id="user" placeholder="usuario" required>
           <label for="user">usuário</label>
         </div>
-        <div class="form-floating">
+
+        <div class="form-floating mt-1">
           <input type="password" class="form-control" id="pass" placeholder="senha" required>
           <label for="pass">senha</label>
         </div>
 
-        <div class="form-floating">
-          <input type="text" class="form-control" id="name" placeholder="nome" required>
+        <div class="form-floating mt-1">
+          <input type="text" class="form-control" id="name" placeholder="nome completo" required>
           <label for="name">nome completo</label>
         </div>
 
