--- a/application/event/index.html
+++ b/application/event/index.html
@@ -18,29 +18,26 @@
 
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body style="background-image: url('../assets/background.jpg');">
    
 
 
 <main class="container">
   <div class="row mb-2">
 
-
-
-    <!--breadcrumb: start -->
-    <div class="container my-5">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb breadcrumb-chevron p-3 bg-body-tertiary rounded-3">
-          <li class="breadcrumb-item">
-            <a class="link-body-emphasis fw-semibold text-decoration-none" href="../home/index.html">Home</a>
-          </li>
-          <li class="breadcrumb-item active" aria-current="page">
-            Evento
-          </li>
-        </ol>
-      </nav>
+    <!-- header: start -->
+    <div class="container">
+      <header class="d-flex flex-wrap py-3 mb-4">
+        <div class="col-md-3">
+          <button type="button" class="btn btn-primary" id="back-home">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-return-left" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z"></path>
+            </svg>
+          </button>
+        </div>
+      </header>
     </div>
-    <!--breadcrumb: end -->
+    <!-- header: end -->
 
 
     <!--content: start-->
@@ -48,9 +45,9 @@
     
 
         <!--card: start-->
-        <div class="col p-4 d-flex flex-column position-static">
+        <div class="col p-4 d-flex flex-column position-static" style="color: antiquewhite;">
           <div class="fw-bold display-6">Samba da Orla</div>
-          <div class="mb-1 text-body-secondary">4 de agosto</div>
+          <div class="mb-1">4 de agosto</div>
           <br />
           <div class="card-text mb-auto">
             <div class="fw-bold">Concreto Skate</div>
@@ -66,11 +63,11 @@
             open bar até 21h pra todxs!!!
           </div>
           <br />
-          <a href="https://www.instagram.com/sambadaorlabh/" target="_blank">
-            Instagram
+          <a class="mt-2" href="https://www.instagram.com/sambadaorlabh/" target="_blank">
+            <strong>Instagram</strong>
           </a> 
-          <a href="https://www.sympla.com.br/evento/samba-da-orla-4-08/2089088" target="_blank">
-            Sympla
+          <a class="mt-2" href="https://www.sympla.com.br/evento/samba-da-orla-4-08/2089088" target="_blank">
+            <strong>Sympla</strong>
           </a>
         </div>
       <!--card: end -->
