feat: reset colors

--- a/application/mural/index.html
+++ b/application/mural/index.html
@@ -17,6 +17,13 @@
     <link rel="stylesheet" href="../assets/dist/css/bootstrap.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
+
+    <style>
+        textarea {
+          color: #fff;
+        }
+    </style>
+
   </head>
   <body style="background-image: url('../assets/background.jpg');">
    
