feat: update textarea color and fix messages data

--- a/application/mural/index.html
+++ b/application/mural/index.html
@@ -18,12 +18,6 @@
 
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
 
-    <style>
-        textarea {
-          background-color: #fff;
-        }
-    </style>
-
   </head>
   <body style="background-image: url('../assets/background.jpg');">
    
@@ -58,7 +52,7 @@
       <!-- form -->
       <div class="pb-2" style="color: antiquewhite !important;"><strong>Deixe aqui seu recadinho pra mim <3</strong></div>
       <div class="input-group">
-        <textarea id="message" class="form-control" aria-label="With textarea" style="min-height: 100px;"></textarea>
+        <textarea id="message" class="form-control" aria-label="With textarea" style="min-height: 100px; background-color: white;"></textarea>
       </div>
       <br />
       <button type="button" class="btn btn-primary" id="send-message">
