feat: update mural colors

--- a/application/mural/index.html
+++ b/application/mural/index.html
@@ -52,7 +52,7 @@
       <!-- form -->
       <div class="pb-2" style="color: antiquewhite !important;"><strong>Deixe aqui seu recadinho pra mim <3</strong></div>
       <div class="input-group">
-        <textarea id="message" class="form-control" aria-label="With textarea" style="min-height: 100px; background-color: white;"></textarea>
+        <textarea id="message" class="form-control" aria-label="With textarea" style="min-height: 100px; background-color: white; color: darkslategray;"></textarea>
       </div>
       <br />
       <button type="button" class="btn btn-primary" id="send-message">
