feat: update event link

--- a/application/event/index.html
+++ b/application/event/index.html
@@ -66,7 +66,7 @@
           <a class="mt-2" href="https://www.instagram.com/sambadaorlabh/" target="_blank">
             <strong>Instagram</strong>
           </a> 
-          <a class="mt-2" href="https://www.sympla.com.br/evento/samba-da-orla-4-08/2089088" target="_blank">
+          <a class="mt-2" href="https://www.sympla.com.br/samba-da-orla-408__2089088?token=e1217ef94a25fc9396760cc4311346e6" target="_blank">
             <strong>Sympla</strong>
           </a>
         </div>
