--- a/application/home/index.html
+++ b/application/home/index.html
@@ -22,6 +22,12 @@
 
   <div class="container px-4 py-5">
 
+
+    <div class="text-center" style="color: antiquewhite !important; font-size: x-large;">
+      <div><strong>Bem vindxs ao Baile da Jack</strong></div>
+      <div><strong>#trintou</strong></div>
+    </div>
+
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
 
       
