feat: update ranking description

--- a/application/quiz/index.html
+++ b/application/quiz/index.html
@@ -53,6 +53,12 @@
     <!--content: start-->
     <div>
 
+      <div class="" style="color: antiquewhite !important;">
+        <div class="pb-4"><strong>Esse é o ranking da pessoa que mais conhece a Jack, então são perguntinhas que até minha mãe não saberia kkkkkkk</strong></div>
+        <div class="pb-4"><strong>Para compensar esse desafio está valendo um presente 🤭</strong></div>
+        <br /><br />
+      </div>
+
         <!--table: start-->
         <div class="col-md-6">
           <div class="bd-example-snippet bd-code-snippet"><div class="bd-example m-0 border-0">
