feat: update mural description

--- a/application/mural/index.html
+++ b/application/mural/index.html
@@ -47,6 +47,13 @@
     <!--content: start-->
     <div>
     
+      <!-- description: start -->
+      <div class="" style="color: antiquewhite !important;">
+        <div class="pb-2"><strong>Pra você que não teve tempo ou que esqueceu, deixe AQUI um recadinho da sua experiência no meu aniversário, vou adorar saber!</strong></div>
+        <div><strong>Mas se preferir pode deixar uma mensagem fofa tbm 😍</strong></div>
+        <br /><br />
+      </div>
+      <!-- description: end -->
 
 
       <!-- form -->
