--- a/application/quiz/index.html
+++ b/application/quiz/index.html
@@ -52,10 +52,12 @@
     <div>
 
       <div class="" style="color: antiquewhite !important;">
-        <div class="pb-2"><strong>Esse é o ranking da pessoa que mais conhece a Jack, então são perguntinhas que até minha mãe não saberia kkkkkkk</strong></div>
-        <div class="pb-4"><strong>Para compensar esse desafio está valendo um presente 🤭</strong></div>
+        <div class="pb-2"><strong>Bora lá com o ranking dos BFFs que conhecem o Jack super bem! </strong></div>
+        <div class="pb-2"><strong>As perguntas são tão incríveis que até minha mãe ficaria de queixo caído com as alternativas kkkkkkk.</strong></div>
+        <div class="pb-4"><strong>E olha só, tem um presentão em jogo para animar esse desafio! 😉</strong></div>
         <br /><br />
       </div>
+
 
         <!--table: start-->
         <div class="col-md-6">
