--- a/application/home/index.html
+++ b/application/home/index.html
@@ -85,6 +85,19 @@
         </a>
       </div>
 
+      <div class="col">
+        <a href="../album/index.html" style="text-decoration: none;">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('images/album.png');">
+          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold"></h3>
+          </div>
+          <div class="card-body">
+            <span class="fw-bold display-6">ALBUM</span>
+          </div>
+        </div>
+        </a>
+      </div>
+
 
     </div>
   </div>
