--- a/application/album/index.html
+++ b/application/album/index.html
@@ -59,7 +59,7 @@
           <div class="mb-3">
             <input type="file" class="form-control" id="images-input" name="images[]" multiple>
           </div>
-          <button type="submit" class="btn btn-primary" id="upload-button">Enviar</button>
+          <button type="button" class="btn btn-primary" id="upload-button">Enviar</button>
         </form>
         </div></div>
       </div><br />
