--- a/application/quiz/index.html
+++ b/application/quiz/index.html
@@ -67,7 +67,7 @@
               <tr>
                 <th scope="col">#</th>
                 <th scope="col">Nome</th>
-                <th scope="col">Pontuação</th>
+                <th scope="col" style="text-align: center;">Pontuação</th>
               </tr>
               </thead>
               <tbody>
