--- a/application/quiz/quiz.html
+++ b/application/quiz/quiz.html
@@ -29,6 +29,13 @@
       label {
         font-size: small;
       }
+      .list-group-item-check {
+        background-color: white;
+        color: black;
+      }
+      .list-group-item-check:hover + .list-group-item {
+        background-color: var(--bs-primary);
+      }
     </style>
 
   </head>
