--- a/application/mural/index.html
+++ b/application/mural/index.html
@@ -68,8 +68,12 @@
       <!-- form -->
 
       <!--- messages: start-->
-      <br />
-      <div id="mural" class="row"></div>
+      <div class="album py-5 bg-body-tertiary" style="background-color: transparent !important;">
+        <div class="container">
+          <div id="messages-section" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          </div>
+        </div>
+      </div>
       <!-- messages: end -->
 
       
