feat: validation improvements

--- a/application/album/index.html
+++ b/application/album/index.html
@@ -54,16 +54,46 @@
 
       <!-- form: start -->
       <div>
-        <div class="bd-example-snippet bd-code-snippet"><div class="bd-example m-0 border-0">
-        <form>
-          <div class="mb-3">
-            <input type="file" class="form-control" id="images-input" name="images[]" multiple>
+        <div class="bd-example-snippet bd-code-snippet">
+          <div class="bd-example m-0 border-0">
+            <form>
+
+
+              <!-- error section: start -->
+              <div id="error-section" class="mb-2" style="display:none;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
+                  <path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.146.146 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.163.163 0 0 1-.054.06.116.116 0 0 1-.066.017H1.146a.115.115 0 0 1-.066-.017.163.163 0 0 1-.054-.06.176.176 0 0 1 .002-.183L7.884 2.073a.147.147 0 0 1 .054-.057zm1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566z"/>
+                  <path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995z"/>
+                </svg>
+                <strong id="error-message" style="color: black;"></strong>
+              </div>
+              <!-- error section: end -->
+
+
+              <!-- input section: start -->
+              <div class="mb-3">
+                <input type="file" class="form-control" id="images-input" name="images[]" multiple>
+              </div>
+              <button type="button" class="btn btn-primary" id="upload-button">Enviar</button>
+              <!-- input section: end -->
+  
+
+            </form>
           </div>
-          <button type="button" class="btn btn-primary" id="upload-button">Enviar</button>
-        </form>
-        </div></div>
-      </div><br />
+        </div>
+        <br />
+      </div>
       <!-- form: end -->
+
+      <!-- spinner: start -->
+      <div id="spinner" style="display:none;">
+        <div class="text-center">
+          <div class="spinner-border text-primary" role="status">
+              <span class="sr-only"></span>
+          </div>
+        </div>
+      </div>
+      <!-- spinner: end -->
 
       <!--album: start-->
       <div class="album py-5 bg-body-tertiary" style="background-color: transparent !important;">
